<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.gp.app.professionalpa.NotesLayoutManagerActivity" >

    <item android:id="@+id/actionSearch"
        android:icon="@drawable/minote_search"
        android:title="@string/action_search"
        android:showAsAction="collapseActionView|ifRoom"
        android:actionViewClass="android.widget.SearchView"/>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
    <item
        android:id="@+id/action_filter"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_filter">
        <menu>
            <item
                android:id="@+id/defaultFilter"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/defaultFilter"/>
            
            <item
                android:id="@+id/note"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/note"/>
        
            <item
                android:id="@+id/event"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/event"/>
        </menu>
    </item>

    <item
        android:id="@+id/editEmailId"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/edit_emailId"/>

    <!--<item
        android:id="@+id/export_notes"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/export_notes"/> -->
    <item
        android:id="@+id/import_notes"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/import_notes"/>
    <item
        android:id="@+id/action_clear_all_notes"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/clear_all_notes"/>
    
    <item
        android:id="@+id/action_exit_professional_pa_application"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/exit"/>
</menu>
