<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
     
    <item
        android:id="@+id/itemEdit"
        android:icon="@drawable/minote_edit"
        android:showAsAction="always"
        android:title="Edit"
        android:titleCondensed="Delete">
    </item>
    
    <item android:id="@+id/pickColor"
        android:icon="@drawable/minote_color_picker"
        android:title="@string/pickColour"
        android:showAsAction="always" />
    
    <item android:id="@+id/shareNote"
        android:icon="@drawable/minote_share"
        android:title="@string/action_share"
        android:showAsAction="always"/>

    <item android:id="@+id/connectFriends"
        android:icon="@drawable/minote_group"
        android:title="@string/action_group"
        android:showAsAction="always"/>

    <item
        android:id="@+id/noteCopy"
        android:icon="@drawable/minote_copy"
        android:title="Copy"
        android:titleCondensed="Copy">
    </item>

    <item
        android:id="@+id/itemDelete"
        android:icon="@drawable/minote_delete"
        android:title="Delete"
        android:titleCondensed="Delete">
    </item>
</menu>